tests/syntax/bad/testfile-expr1-1.scala
class A { def m() { var x = (; } }
object Main { def main(args: Array[String]) { } }
